Add unit tests for `AreaProcess` and `Area` domains to validate constructors, binding behavior, and lifecycle methods; enhance `ProcessDeploymentRepositoryImplTest` to cover deployment mappings.